--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <option value="state">State</option>
                 <option value="metro">Metro</option>
                 <option value="county">County</option>
-                <option value="zip-code">Zip Code</option>
+                <option value="zipcode">Zip Code</option>
             </select>
             <div class="share-icon" onclick="openShareModal()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -46,59 +46,72 @@
             <div class="my-menu-item">
                 Investor Trends
                 <div class="my-dropdown-menu investor-trends">
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Shadow Inventory %</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Migration Total</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Migration % of Population</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Building Permits</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Shadow Inventory %</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Migration Total</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Migration % of
+                        Population</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Building Permits</label>
                 </div>
             </div>
             <div class="my-menu-item">
                 Demographics
                 <div class="my-dropdown-menu demographics">
                     <label><input type="checkbox" onclick="onlyOneSelect();" checked /><span></span> Population</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Median Household Income</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Population Growth</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Income Growth</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Remote Work %</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Homeownership Rate</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Mortgaged Home %</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Median Age</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Poverty Rate</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Housing Units</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Housing Units Growth Rate</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> College Degree Rate</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Median Household
+                        Income</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Population Growth</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Income Growth</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Remote Work %</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Homeownership Rate</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Mortgaged Home %</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Median Age</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Poverty Rate</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Housing Units</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Housing Units Growth
+                        Rate</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> College Degree Rate</label>
                 </div>
             </div>
             <div class="my-menu-item ">
                 Affordability
                 <div class="my-dropdown-menu affordability">
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Home Value</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Home Value Growth (YoY)</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Home Value Growth (MoM)</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Overvalued %</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Value/Income Ratio</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Mortgage Payment</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Salary to Afford a House</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Mtg Payment as % of Income</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Property Tax Rate</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> % Crash from 2007-12</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Home Value</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Home Value Growth
+                        (YoY)</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Home Value Growth
+                        (MoM)</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Overvalued %</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Value/Income Ratio</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Mortgage Payment</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Salary to Afford a
+                        House</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Mtg Payment as % of
+                        Income</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Property Tax Rate</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> % Crash from
+                        2007-12</label>
                 </div>
             </div>
             <div class="my-menu-item">
                 Market Trends
                 <div class="my-dropdown-menu market-trends">
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> For Sale Inventory</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Sale Inventory Growth (YoY)</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Sale Inventory Growth (MoM)</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Inventory Surplus/Deficit</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Price Cut %</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Days on Market</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Days on Market Growth (YoY)</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Inventory as % of Houses</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Median Listing Price</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> Median Listing Price (YoY)</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> New Listing Count</label>
-                    <label><input type="checkbox" onclick="onlyOneSelect();"/><span></span> New Listing Count (YoY)</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> For Sale Inventory</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Sale Inventory Growth</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Inventory
+                        Surplus/Deficit</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Price Cut %</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Days on Market</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Days on Market Growth
+                        (YoY)</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Inventory as % of
+                        Houses</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Median Listing
+                        Price</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Median Listing Price Growth
+                        (YoY)</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> New Listing Count</label>
+                    <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> New Listing Count Growth
+                        (YoY)</label>
                 </div>
             </div>
         </div>
@@ -118,7 +131,8 @@
                     <div class="panel-slider">
                         <div class="panel-container">
                             <div class="panel">Population</div>
-                            <div class="panel"><strong>N/A</strong><span class="value-text">N/A</span><span class="change-text">N/A</span></div>
+                            <div class="panel"><strong>N/A</strong><span class="value-text">N/A</span><span
+                                    class="change-text">N/A</span></div>
                             <div class="panel"><strong>N/A</strong><span class="value-text">N/A</span></div>
                             <div class="panel"><strong>N/A</strong><span class="value-text">N/A</span></div>
                             <div class="panel">Extra Panel 1</div>
@@ -129,8 +143,12 @@
                 </div>
                 <div class="graph-right">
                     <div class="graph-header">
-                        <h2 class="graph-title">Population</h2>
-
+                        <div class="graph-left-controls">
+                            <h2 class="graph-title">Population</h2>
+                            <p id="populationDescription" class="graph-description">Population size is fundamental for
+                                understanding economic scale, resource allocation, political representation, and market
+                                demand in any region.</p>
+                        </div>
                         <div class="graph-controls">
                             <select id="dataSelector" class="data-selector">
                                 <option value="Investor Trends">Investor Trends</option>
