--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                 </svg>
             </div>
             <input type="text" placeholder="Search..." id="search-box">
-            <div id="suggestions"></div>
+            <div id="suggestions">
+                <div class="suggestion-item current-location" id="currentLocation">
+                    📍 Use my current location
+                </div>
+            </div>
             <select>
                 <option value="state">State</option>
                 <option value="metro">Metro</option>
