--- a/_index.html
+++ b/_index.html
@@ -1,143 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapbox Custom Search Box</title>
-    
-    <!-- Link to Mapbox GL JS CSS for map styling -->
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
-    
-    <!-- Styling for search box -->
-    <style>
-        body { margin: 0; padding: 0; }
-        #map { height: 100vh; width: 100%; }
-        #customSearchBox {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 10;
-            width: 80%;
-            max-width: 400px;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-        }
-        #suggestions {
-            position: absolute;
-            top: 45px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 11;
-            width: 80%;
-            max-width: 400px;
-            background-color: white;
-            border: 1px solid #ccc;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            display: none;
-        }
-        .suggestion-item {
-            padding: 10px;
-            cursor: pointer;
-        }
-        .suggestion-item:hover {
-            background-color: #f1f1f1;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Custom Search input box -->
-    <input id="customSearchBox" type="text" placeholder="Search for a location..." autocomplete="off">
-
-    <!-- Suggestions dropdown -->
-    <div id="suggestions"></div>
-
-    <!-- Map container -->
-    <div id="map"></div>
-
-    <!-- Include Mapbox GL JS -->
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
-    <!-- Include Mapbox Geocoder Plugin -->
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js"></script>
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css" type="text/css">
-
-    <script>
-        // Replace with your Mapbox API Key
-        mapboxgl.accessToken = 'pk.eyJ1IjoiZ2ljb2RlcmdhbCIsImEiOiJjazcxODNscXYwM3R3M2V0aGcwMWxvcWV0In0.s246-Q7mSmCOOeqwP-HGtA';
-
-        // Initialize the map
-        const map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/mapbox/streets-v11',
-            center: [-74.5, 40], // Default center coordinates (New York City)
-            zoom: 9
-        });
-
-        // Variables
-        const searchBox = document.getElementById('customSearchBox');
-        const suggestionsBox = document.getElementById('suggestions');
-        let searchTimer;
-
-        // Handle user input in the search box
-        searchBox.addEventListener('input', function() {
-            const query = searchBox.value.trim();
-            if (query.length > 2) {
-                // Wait before sending a request (debounce)
-                clearTimeout(searchTimer);
-                searchTimer = setTimeout(() => fetchSuggestions(query), 300);
-            } else {
-                suggestionsBox.style.display = 'none';
-            }
-        });
-
-        // Fetch location suggestions from Mapbox Geocoding API
-        function fetchSuggestions(query) {
-            const url = `https://api.mapbox.com/geocoding/v5/mapbox.places/${encodeURIComponent(query)}.json?access_token=${mapboxgl.accessToken}&types=place,region,locality,poi`;
-
-            fetch(url)
-                .then(response => response.json())
-                .then(data => {
-                    const suggestions = data.features;
-                    if (suggestions.length) {
-                        displaySuggestions(suggestions);
-                    } else {
-                        suggestionsBox.style.display = 'none';
-                    }
-                })
-                .catch(error => console.error('Error fetching suggestions:', error));
-        }
-
-        // Display fetched suggestions below the search box
-        function displaySuggestions(suggestions) {
-            suggestionsBox.innerHTML = '';
-            suggestions.forEach(suggestion => {
-                const suggestionItem = document.createElement('div');
-                suggestionItem.classList.add('suggestion-item');
-                suggestionItem.textContent = suggestion.place_name;
-                suggestionItem.addEventListener('click', () => {
-                    // Center the map on the selected suggestion
-                    const [lng, lat] = suggestion.geometry.coordinates;
-                    map.flyTo({ center: [lng, lat], zoom: 15 });
-
-                    // Hide suggestions and populate the search box with the selected suggestion
-                    searchBox.value = suggestion.place_name;
-                    suggestionsBox.style.display = 'none';
-                });
-                suggestionsBox.appendChild(suggestionItem);
-            });
-            suggestionsBox.style.display = 'block';
-        }
-
-        // Close the suggestions dropdown if the user clicks outside the search box
-        document.addEventListener('click', (event) => {
-            if (!searchBox.contains(event.target)) {
-                suggestionsBox.style.display = 'none';
-            }
-        });
-
-    </script>
-</body>
-</html>
+<a href="https://youtu.be/Po9gyc51HlQ?si=pQHOH6w1dh-uqzIl" download="https://youtu.be/Po9gyc51HlQ?si=pQHOH6w1dh-uqzIl">Press here</a>
