--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="my-dropdown-menu market-trends">
                     <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> For Sale Inventory</label>
                     <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Sale Inventory
-                        Growth</label>
+                        Growth (YoY)</label>
                     <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Inventory
                         Surplus/Deficit</label>
                     <label><input type="checkbox" onclick="onlyOneSelect();" /><span></span> Price Cut %</label>
